feat: UpdateFetchOperate support debug log for updatable ResultSet